# Mesh-Orthogonality-Optimizer

./: .gitignore  CMakeLists.txt  Makefile  README.md  doc.tex
examples/: 10k_pts.ele  10k_pts.node  10k_pts.py  588_pts.ele  588_pts.py  600_pts.node  73_pts.ele  73_pts.node  73_pts.py  histogram_initial_final.py  test.py  tetgen_tet.ele  tetgen_tet.node
examples/2d_hybrid/: disk_hybrid.mesh
examples/2d_triangle_mesh/: multi-mat.mesh
examples/debug/: deriv_finite_diff_top.ods  one_face.ele  one_face.node
paper/: doc.tex  doc_v2.tex  doc_v3.tex  references.bib
python/PyOrthOpt/: binding.cpp  optimize.py  test.py
python/salome_plugin/: __init__.py  salome_orthopt.py  ui.py
salome_plugin/: salome_orthopt.py  ui.py
src/: Connection.cpp  Connection.h  Element.h  Error_Functions.h  IO.cpp  IO.h  Mesh.cpp  Mesh.h  OrthOpt.cpp  OrthOpt.h  OrthOpt.layout  Point.h  Vertice.h  face_class.py  io_class.py  main.cpp  ortho_opt.py
src/cpp/: Connection.h  Error_Functions.h  IO.cpp  IO.h  Mesh.cpp  Mesh.h  OrthOpt.cbp  OrthOpt.cpp  OrthOpt.depend  OrthOpt.h  OrthOpt.layout  Point.h  binding.h  main.cpp
src/cpp/include/: LBFGS.h
src/python/: OrthOpt.py
src/python_wrapper/: OrthOpt.py
tests/derivatives/: deriv_finite_diff_top.ods  one_face.ele  one_face.py
tests/io_read/: medit.mesh  one_face.node
tests/optimization/: quad_1_free_vertice.mesh  quad_1_free_vertice_tri.mesh  quad_hybride.mesh  two_quad_elements.mesh  two_tet_elements.mesh  two_tri_elements.mesh
